Fix a bug with some info not showing up on the main page.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #92ff92;
+    // background-color: #92ff92;
     font-family: Arial, Helvetica, sans-serif;
 }
 
